<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_name">气象助手</string>
    <string name="navigation_item_forecast">气象预报</string>
    <string name="navigation_item_lift">生活指数</string>
    <string name="navigation_item_city">城市管理</string>
    <string name="menu_text_set">设置</string>
    <string name="menu_text_exit">退出应用</string>
    <string name="change_city_title_text">切换城市</string>
    <string name="change_city_location">定位城市</string>
    <string name="change_hot_city">热门城市</string>
    <string name="change_more_city">更多城市</string>
</resources>
