<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_default_status"
        android:layout_marginTop="@dimen/menu_icon_margin_top"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textSize="15sp"
        android:textColor="@color/menu_text_color"
        android:layout_marginTop="@dimen/menu_text_margin_top"/>
    <Button
        android:id="@+id/btn_menu_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/menu_text_color"
        android:textSize="15sp"
        android:text="@string/menu_text_set"
        android:background="@drawable/menu_btn_background"
        android:padding="@dimen/menu_text_padding"
        android:drawableLeft="@drawable/ic_dl_a"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_menu_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/menu_text_exit"
            android:background="@drawable/menu_btn_background"
            android:padding="@dimen/menu_text_padding"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
</LinearLayout>
