<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/navigation_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_navigation_lift"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/navigation_item_lift"
            android:textColor="@color/navigation_text_color"
            android:padding="@dimen/natigation_text_padding"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <Button
            android:id="@+id/btn_navigation_forecast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/navigation_item_forecast"
            android:textColor="@color/navigation_text_color"
            android:padding="@dimen/natigation_text_padding"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:id="@+id/btn_navigation_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/navigation_item_city"
            android:textColor="@color/navigation_text_color"
            android:padding="@dimen/natigation_text_padding"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>
</LinearLayout>
