<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.com.tarena.weatherapp.ui.ChangeCityAct"
    android:background="@color/change_city_background">
    <RelativeLayout
        android:id="@+id/rl_change_city_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/change_city_title_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:text="@string/change_city_title_text"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wb_btn_off_normal"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/et_seach_city_info"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/cityhot_edittext_bg"
        android:layout_below="@+id/rl_change_city_title"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/wb_search_icon"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:hint="请输入城市名称"
        android:textColor="@color/change_city_seach_text_color"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_city_location"
        android:layout_alignLeft="@+id/et_seach_city_info"
        android:layout_below="@+id/et_seach_city_info"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/tv_change_city_location"/>
    <TextView
        android:id="@+id/tv_change_city_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="北京"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:textSize="20sp"
        android:background="@color/change_city_location_background_color"
        android:layout_alignRight="@+id/et_seach_city_info"
        android:layout_below="@+id/et_seach_city_info"/>
    <View
        android:id="@+id/v_change_city_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e2e2e2"
        android:layout_below="@+id/tv_change_city_location"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/et_seach_city_info"
        android:layout_alignRight="@+id/et_seach_city_info"
        />
    <TextView
        android:id="@+id/tv_change_host_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_hot_city"
        android:layout_alignLeft="@+id/et_seach_city_info"
        android:layout_below="@+id/v_change_city_line"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_change_host_city"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <GridView
            android:id="@+id/gv_change_host_city"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:numColumns="4"
            android:horizontalSpacing="10dp"
            android:verticalSpacing="5dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_change_city_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_more_city"/>
    </LinearLayout>
</RelativeLayout>
